[gd_scene load_steps=5 format=3 uid="uid://bgghx27ni246q"]

[ext_resource type="Script" path="res://Scripts/HUD/pause_menu.gd" id="1_irgnx"]
[ext_resource type="FontFile" uid="uid://l348hsha7jl0" path="res://Fonts/PixeloidSansBold-PKnYd.ttf" id="1_y0vyw"]
[ext_resource type="Shader" path="res://Shaders/blur.gdshader" id="2_mqsxw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cu8oc"]
shader = ExtResource("2_mqsxw")
shader_parameter/blur_amount = 2.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_irgnx")

[node name="TextureRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_cu8oc")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Paused" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -116.5
offset_top = 50.0
offset_right = 116.5
offset_bottom = 112.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.694508, 0.886431, 0.912578, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 18
theme_override_fonts/font = ExtResource("1_y0vyw")
theme_override_font_sizes/font_size = 50
text = "PAUSED"
horizontal_alignment = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -24.0
offset_right = 100.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start Button" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_y0vyw")
theme_override_font_sizes/font_size = 25
text = "Start
"

[node name="Quit To Main" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_y0vyw")
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="HSlider" type="HSlider" parent="Buttons"]
layout_mode = 0
offset_left = -3.0
offset_top = 149.0
offset_right = 197.0
offset_bottom = 165.0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Volume Tag" type="Label" parent="Buttons"]
layout_mode = 0
offset_left = -21.0
offset_top = 108.0
offset_right = 215.0
offset_bottom = 139.0
theme_override_fonts/font = ExtResource("1_y0vyw")
theme_override_font_sizes/font_size = 25
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Buttons/Start Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Buttons/Quit To Main" to="." method="_on_quit_button_pressed"]
[connection signal="value_changed" from="Buttons/HSlider" to="." method="_on_h_slider_value_changed"]
